--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
@@ -125,7 +125,7 @@
                 <td>{{ form_errors(form.SpracheSonstiges) }}</td>
             </tr>
             {{ form_row(form.literatur) }}
-            {{ form_row(form.voraussetzungInh) }}
+            {{ form_row(form.voraussetzungInhalte) }}
             {{ form_row(form.lehrveranstaltungen) }}
             {{ form_row(form.pruefungsformen) }}
             {{ form_row(form.PruefungsformSonstiges) }}
