--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/semesterListe.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/semesterListe.html.twig
@@ -6,4 +6,7 @@
         <li><a href="{{ path('semesterPlan', {'semesterString' : semester.getSemester() }) }}">{{ semester }}</a></li>
     {% endfor %}
     </ul>
+
+    {% include '@FHBingenMHB/flashbags.html.twig' %}
+
 {% endblock %}
