--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerVerwaltung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerVerwaltung.html.twig
@@ -17,7 +17,7 @@
             <tr>
                 <th>Dozenten</th>
                 <th>Studiengangleiter</th>
-                <th>Benutzer reaktivieren</th>
+                <th>deaktivierte Dozenten</th>
             </tr>
 
             <tr>
