--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/buttons.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/buttons.html.twig
@@ -1,4 +1,4 @@
 <div class="ourButtons">
-    <button class="btn btn-default" type="reset">zurücksetzen</button>
-    <button class="btn btn-primary" type="submit">speichern</button>
+    <button class="btn btn-default" type="reset">Änderung Verwerfen</button>
+    <button class="btn btn-primary" type="submit">Speichern</button>
 </div>
