--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulDeaktivierung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulDeaktivierung.html.twig
@@ -11,7 +11,7 @@
         });
     </script>
     <div class="table-responsive">
-        <h3>Deaktivierte Module</h3>
+        <h3>Vollständig deaktivierte Module</h3>
         {% if deaktiv is not empty %}
         <table id="deaktivierte" class="table table-bordered tablesorter">
             <thead>
