--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
@@ -26,5 +26,9 @@
         <li role="presentation">
             <a id="moduldeaktivierungLink" href=" {{ path('deaktivierungAlleModule') }}">Moduldeaktivierung</a>
         </li>
+
+        <li role="presentation">
+            <a id="semesterplanungLink" href=" {{ path('semesterListe') }}">Semesterplanung</a>
+        </li>
     {% endif %}
 {% endif %}
