--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
@@ -29,6 +29,7 @@
         .modul table th, .modul table td {
             border: 1px solid gray;
             padding: 0 10px;
+            page-break-inside: avoid;
         }
 
         .modul .studiensemester {
