MHB: Lehrende-Fix (?)

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
@@ -266,7 +266,11 @@
                             {% if lehrender.getDozent().getNachname() == 'Alle' %}
                                 Alle Dozenten des Studiengangs {{ modulBeschreibung.getAngebot().getStudiengang() }}
                             {% else %}
-                                {{ lehrender.getDozent() }}
+                                {% if lehrender == modulBeschreibung.getAngebot().getVeranstaltung().getLehrende()|last %}
+                                    {{ lehrender.getDozent() }}
+                                {% else %}
+                                    {{ lehrender.getDozent() ~ ', ' }}
+                                {% endif %}
                             {% endif %}
                         {% endfor %}
                     {% endif %}
