--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeErstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeErstellung.html.twig
@@ -18,14 +18,13 @@
         });
     </script>
 
-    <h4>Modul aus {{ studiengang }} bearbeiten</h4>
+    {# TODO: Hinweis darauf ausgeben, dass hier nur der "Overwrite" festgelegt wird. #}
+
+    <h4>{{ 'Veranstaltung "' ~ angebot.getVeranstaltung() ~ '" aus ' ~ angebot.getStudiengang() ~ ' bearbeiten'}}</h4>
     <div class="table-responsive">
         {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
         <table class="table table-bordered">
             {{ form_errors(form) }}
-            {% if modul != NULL %}
-            {{ modul.getName() }}
-            {% endif %}
             {{ form_row(form.code) }}
         </table>
 
