neue Modulcodevergabe 6/? (automatische Generierung nach Angeboterstellung fehlt noch)

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeErstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeErstellung.html.twig
@@ -25,7 +25,8 @@
         {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
         <table class="table table-bordered">
             {{ form_errors(form) }}
-            {{ form_row(form.code) }}
+            {# {{ form(form.code) }} #}
+            {{ form_row(form.overwrite) }}
         </table>
 
         {% include '@FHBingenMHB/buttons.html.twig' %}
