--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/semesterPlanListe.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/semesterPlanListe.html.twig
@@ -10,36 +10,40 @@
     </script>
 
     <div class="table-responsive">
-    {#{% if form.semesterplan is not empty %}#}
-    <table id="semesterplan" class="table table-bordered tablesorter">
-        <thead>
-        <tr>
-            <th style="width:25%">Modul</th>
-            <th style="min-width: 80px; width: 5%">Findet statt?</th>
-            <th style="min-width: 110px; width: 15%">Dozent</th>
-            <th style="min-width: 80px; width: 5%">Lehrbeauftragter</th>
-            <th style="min-width: 70px; width: 10%">SWS Vorlesung</th>
-            <th style="min-width: 70px; width: 10%">SWS Übung</th>
-            <th style="min-width: 100px; width: 15%">Anzahl Übungsgruppen</th>
-            <th style="min-width: 100px; width: 15%">Grösse einer Übungsgruppe</th>
-        </tr>
-        </thead>
-        {#{% endif %}#}
-        <tbody>
         {{ form_start(form) }}
-        {% for semesterplan in form.semesterplan %}
+        {{ form_errors(form) }}
 
-            <td>{{ form_widget(semesterplan.angebot) }}</td>
-            <td style="text-align: center">{{ form_widget(semesterplan.findetStatt) }}</td>
-            <td>{{ form_widget(semesterplan.dozent) }}</td>
-            <td style="text-align: center">{{ form_widget(semesterplan.istLehrbeauftragter) }}</td>
-            <td>{{ form_widget(semesterplan.SWSVorlesung) }}</td>
-            <td>{{ form_widget(semesterplan.SWSUebung) }}</td>
-            <td>{{ form_widget(semesterplan.AnzahlUebungsgruppen) }}</td>
-            <td>{{ form_widget(semesterplan.GroesseUebungsgruppen) }}</td>
-        </tbody>
-        {% endfor %}
-    </table>
+        <table id="semesterplan" class="table table-bordered tablesorter">
+
+            <thead>
+            <tr>
+                <th style="width:25%">Modul</th>
+                <th style="min-width: 80px; width: 5%">Findet statt?</th>
+                <th style="min-width: 110px; width: 15%">Dozent</th>
+                <th style="min-width: 80px; width: 5%">Lehrbeauftragter</th>
+                <th style="min-width: 70px; width: 10%">SWS Vorlesung</th>
+                <th style="min-width: 70px; width: 10%">SWS Übung</th>
+                <th style="min-width: 100px; width: 15%">Anzahl Übungsgruppen</th>
+                <th style="min-width: 100px; width: 15%">Grösse einer Übungsgruppe</th>
+            </tr>
+            </thead>
+
+            <tbody>
+            {% for semesterplan in form.semesterplan %}
+                <tr>
+                    <td>{{ form_widget(semesterplan.angebot) }}</td>
+                    <td style="text-align: center">{{ form_widget(semesterplan.findetStatt) }}</td>
+                    <td>{{ form_widget(semesterplan.dozent) }}</td>
+                    <td style="text-align: center">{{ form_widget(semesterplan.istLehrbeauftragter) }}</td>
+                    <td>{{ form_widget(semesterplan.SWSVorlesung) }}</td>
+                    <td>{{ form_widget(semesterplan.SWSUebung) }}</td>
+                    <td>{{ form_widget(semesterplan.AnzahlUebungsgruppen) }}</td>
+                    <td>{{ form_widget(semesterplan.GroesseUebungsgruppen) }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+
+        </table>
         {% include '@FHBingenMHB/buttons.html.twig' %}
         {{ form_end(form) }}
     </div>
