--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Login/login.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Login/login.html.twig
@@ -8,7 +8,7 @@
     <div class="container" style="width: 300px">
         <form class="form-signin" role="form" action="{{ path('loginCheck') }}" method="post">
             <label for="inputEmail" class="sr-only">Email-Adresse:</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email-Addresse" name="_username"
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email-Adresse" name="_username"
                    value="{{ last_username }}" required autofocus/>
 
             <label for="inputPssword" class="sr-only">Passwort</label>
