--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbCover.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbCover.html.twig
@@ -23,7 +23,8 @@
         <br />
 
         {# funktioniert nur auf VM, nicht lokal #}
-        <img src="{{ asset('bundles/fhbingenmhb/images/fh.png', absolute=true) }}" alt="FH Logo" width="450px" height="450px"/>
+        {# <img src="{{ asset('bundles/fhbingenmhb/images/fh_alt.png', absolute=true) }}" alt="FH Logo" width="450px" height="450px"/> #}
+        <img src="{{ asset('bundles/fhbingenmhb/images/fh.jpg', absolute=true) }}" alt="FH Logo" width="900px" height="400px"/>
 
         <p id="fachbereich">
             {% if studiengang.fachbereich == 1 %}
