--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbCover.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbCover.html.twig
@@ -9,13 +9,13 @@
         }
 
         #coverDiv {
+            display:table;
             text-align: center;
         }
 
         #topDiv, #middleDiv, #bottomDiv {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            display:table-row;
+            vertical-align:middle;
         }
 
         #topDiv, #bottomDiv {
@@ -56,8 +56,9 @@
             {% endif %}
         </span>
             <br/>
+            <br/>
 
-            {{ mhb.beschreibung }} <br/>
+            {{ mhb.beschreibung }}<br/>
 
             <br/>
             <br/>
